--- a/src/main/resources/public/css/styles.css
+++ b/src/main/resources/public/css/styles.css
@@ -8,6 +8,11 @@ body {
 /*with:100px;
 height:100px;*/
 background-color: light-gray;
+margin:20px;
+}
+
+.gameBoard table{
+    margin: 0 auto;
 }
 
 .gameBoard td {
@@ -15,6 +20,7 @@ width: 40px;
 height:40px;
 background-color:blue;
 }
+
 
 table, th, td {
    border: 1px solid black;
@@ -27,6 +33,10 @@ background-color: orange;
 td.BoardHeader, .BoardHeader td{
     background-color: white;
     text-align:center;
+}
+
+.ControlsPanel{
+    margin:20px;
 }
 /*
 button {
